required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fix build on windows (maputil.c)

Version 5.4.0-beta2 (2009-2-25):
--------------------------------

- Fixed a problem where default shade symbols (solid fill, no size) were being
  scaled and not rendered as expected (related to #2896 I believe)

- Fixed a problem with offset polylines (AGG only) (#2868)

- Generate SLD version 1.1.0 (#473) 

- Tracking original geometry type so we can make better decisions on what
  positions to use with POSITION AUTO and annotation layers. (#2770)

- Setting up the same size units between the OGR auto-style and the 
  OGR label attribute binding option (#2900)

- Take better care of the extra items with the inline layers to 
  prevent from memory corruption (#2870)

- Fixed the compiler options for MSVC 2008 (#2898)

Version 5.4.0-beta1 (2009-2-18):
--------------------------------

- restored much of the pre-5.0 capabilities to update a mapfile via URL but in
  a more secure manner (RFC44)

- WMS 1.3.0 support added (#473)

- OWS GetCapabilities should skip layers with status == MS_DELETE (#2582)

- Set the default symbol size to 1 instead of 0 (#2896)

- fix WMS LegendURL to print sld_version for 1.3.0 Capabilities (#473)

- add GetSchemaExtension to WMS to support GetStyles in Capabilities XML (#473)

- move xlink declaration to root of WMS 1.3.0 DescribeLayerResponse

- Fixed a scalebar rounding problem causing to draw zero scalebar width (#2890)

- SLD: if it conatins a Filer Encoding tag, try to always set the
  layer's FILTER element (#2889)

- Add support for rendering INLINE layers with layer attributes (items) (#2870)
